# cdk_eks_kafka

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  ekscdk.code-workspace  pyproject.toml
.claude/: CLAUDE.md  SPEC.md  TODO.md
cdk/: README.md  app.py  cdk.json  pyproject.toml
cdk/.claude/: CLAUDE.md  TODO.md
cdk/docs/: local-dev-tunnel.md
cdk/ekscdk/: config.py  ekscdk_stack.py  s3tables_stack.py  test_ec2_stack.py
cdk/ekscdk/constructs/: eks_cluster.py  kafka.py  monitoring.py  network.py
cdk/manifests/addons/: gp3-storageclass.yaml
cdk/manifests/kafka/: cluster-operator-pod-monitor.yaml  cm.yaml  entity-operator-pod-monitor.yaml  kafka-cluster.yaml  kafka-pod-monitor.yaml  kafka-rebalance.yaml  target-group-binding.yaml
cdk/manifests/kafka/sample-client/: producer-test.yaml
cdk/manifests/monitoring/: kube-prometheus-stack-values.yaml
cdk/manifests/monitoring/dashboards/: grafana-strimzi-kafka-dashboard.yaml
cdk/tests/unit/: test_manifest.py  test_s3tables_stack.py  test_test_ec2_stack.py
ekscdk/: config.py  ekscdk_stack.py  iam_stack.py  kafka_stack.py  privatelink_stack.py
ekscdk/constructs/: _manifest.py  addons.py  eks_cluster.py  kafka.py  kafka_privatelink.py  monitoring.py  network.py
kafka/consumer/: .env.example  README.md  constants.py  consumer.py  events.desc  pyproject.toml
kafka/consumer/scripts/: patch-pyspark-hadoop.sh
kafka/producer/: .gitattributes  constants.py  event_pb2.py  producer.py  pyproject.toml
kafka/proto/: .gitattributes  README.md  event.proto
manifests/addons/: gp3-storageclass.yaml
manifests/amp/: recording-rules.yaml  scrape-config.yaml
manifests/argocd/: kafka-cluster-app.yaml  strimzi-operator.yaml
manifests/kafka/: cm.yaml  kafka-cluster.yaml  kafka-exporter-service.yaml  kafka-node-pool.yaml  kafka-pod-monitor.yaml  kafka-rebalance.yaml  kafka-service-monitor.yaml  node-pool-broker.yaml  node-pool-controller.yaml  privatelink.yaml  target-group-binding.yaml
manifests/kafka/topics/: test-topic.yaml
manifests/monitoring/: adot-configmap.yaml  adot-rbac.yaml  adot-values.yaml  fluent-bit-values.yaml  kminion.yaml  kube-prometheus-stack-values.yaml
manifests/monitoring/dashboards/: grafana-strimzi-exporter-dashboard.yaml  grafana-strimzi-operators-dashboard.yaml
manifests/snapshotter/: controller.yaml  volumesnapshotclass.yaml
tests/unit/: test_ekscdk_stack.py  test_manifest.py
