[project]
name = "ekscdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib>=2.247.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "aws-cdk-lambda-layer-kubectl-v32>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
