[project]
name = "ekscdk"
version = "0.1.0"
description = "AWS CDK (Python) で EKS 上に Kafka 基盤を構築するプロジェクト"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib>=2.253.1,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "aws-cdk-lambda-layer-kubectl-v35>=2.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
