[project]
name = "ekscdk"
version = "0.1.0"
description = "AWS CDK (Python) で EKS 上に Kafka 基盤を構築するプロジェクト"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib>=2.253.1,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "aws-cdk-lambda-layer-kubectl-v35>=2.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.0",
    "pre-commit>=3.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-env>=1.5.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
#addopts = ["-ra", "-q", "--strict-markers", "--strict-config", "--cov=app", "--cov-report=term-missing"]

# [tool.coverage.run]
# branch = true
# source = ["src"]

# [tool.coverage.report]
# fail_under = 80
# show_missing = true
# skip_covered = false
# exclude_lines = [
#     "pragma: no cover",
#     "raise NotImplementedError",
#     "if TYPE_CHECKING:",
#     "@overload",
# ]

[tool.pyright]
include = ["ekscdk", "app.py"]
exclude = ["**/__pycache__", "**/node_modules", "**/.*", ".venv", "tests"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (エラー)
    "F",   # Pyflakes (論理エラー)
    "I",   # isort (import 整列。VSCode の source.organizeImports 連携)
    "C90", # mccabe (循環的複雑度)
    "T20", # flake8-print (print文禁止)
    "PLR", # Pylint Refactor (マジックナンバー、過剰な引数など)
    "BLE", # flake8-blind-except (盲目的なExcept禁止)
    "SIM", # flake8-simplify (with文強制、コード簡略化)
    "S",   # flake8-bandit (セキュリティ、シークレット露呈防御)
    "PT",  # flake8-pytest-style (pytestアサーション強制)
]
ignore = [
    "PLR0913", # Too many arguments: CDK Construct は依存注入で引数が多くなりがちなため許容
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "PLR0913", "E501", "S108"]

[tool.ruff.lint.mccabe]
max-complexity = 10
