[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# EMR 7.13.0 が Python 3.11 をデフォルトに採用しているためローカル開発も 3.11 に揃える
requires-python = ">=3.11,<3.12"
dependencies = [
    "confluent-kafka>=2.6.0",
    # event_pb2.py を protoc 6.x で生成しているため、Python ランタイムも同じメジャーに揃える
    "protobuf>=6,<7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["constants"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["producer.py", "constants.py"]
# protoc 自動生成ファイルは動的属性が多く pyright と相性が悪いので型チェック対象外。
exclude = ["**/__pycache__", "**/.*", ".venv", "**/*_pb2.py", "**/node_modules"]
